--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,7 +2,11 @@
 
 :root{
     --color-gray: #e8ebed;
-    --color-orange: linear-gradient(to right bottom, #ff8f26, #ff5117);
+    --color-gray-2: #898484;
+    --color-gray-3: #f7f9fa;
+    --color-bg: linear-gradient(to right bottom, #f26359, #e64e1b);
+    --color-primary: #f2726a;
+    --color-text: rgba(255, 255, 255, 0.73);
 }
 *{
     margin: 0;
@@ -18,10 +22,14 @@ body{
     font-family: 'Poppins', sans-serif;
     font-size:1.4rem;
 }
-a{
+p{
+    margin:0;
+}
+a, a:hover{
     text-decoration: none;
     color:#000;
     font-weight: 600;
+    font-size: 16px;
 }
 
 ul{
@@ -29,6 +37,22 @@ ul{
     margin:0;
     padding:0;
 }
+i{
+    cursor: pointer;
+}
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+h2{
+    font-size:32px;
+    font-weight: 600;
+    margin:20px 0;
+}
+
+
 .container{
     max-width: 1200px;
 }
@@ -39,14 +63,24 @@ ul{
     outline: none;
     border: none;
     border-radius: 99px;
-    background: var(--color-orange);
+    background: rgb(67,0,10,.85);
+    transition: 0.7s;
+    cursor: pointer;
 }
+.btn_normal:hover{
+    background: var(--color-gray);
+    color: var(--color-orange) !important;
+}
+.btn_normal:focus{
+    outline: none;
+}
+
 .selected{
     background: var(--color-gray);
 }
-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
+.title{
+    font-weight: 600;
+}
+.scrolled{
+    background: rgb(67,0,10,.85) !important
 }
