--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -100,6 +100,9 @@ h2{
     background: #Bf0A30 !important;
     opacity: 0.9;
 }
+.hide{
+    display: none;
+}
 /* footer */
 .footer{
     background: #000;
@@ -194,7 +197,24 @@ h2{
     display: none;
     color:rgba(255, 255, 255, 0.73) !important
 }
+.header .dropdown{
+    background: #fff;
+    width: 100%;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+    position: absolute;
+    top:82px;
+    right:0;
+    text-align: center;
+    font-size: 20px;
+    transition: 0.5s;
+}
 
+.header .dropdown li{
+    padding:10px 20px;
+}
+.header .dropdown li:hover{
+   background: var(--color-primary);
+}
 @media screen and (max-width: 1100px){
     .footer ul{
         width: 45%;
