--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -180,9 +180,7 @@ h2{
     color: rgba(255, 255, 255, 0.95) !important;
     transition: 0.2s;
 }
-.header_body ul a:hover{
-    font-size: 20px !important;
-}
+
 .header_login a{
     margin-right: 20px;
     padding:7px 10px;
@@ -220,10 +218,8 @@ h2{
         width: 45%;
         margin-bottom: 20px;
     }
-    .footer .send_mail{
-        width:100% !important;
-        margin: 0 auto;
-    }
+
+
     .header_body{
         display: none;
     }
@@ -242,9 +238,9 @@ h2{
 /* start */
 .start {
     background: url(/assets/image/background.jpg);
-    background-position: left;
+    background-position: center bottom;
     width: 100%;
-    height: 600px;
+    height: 500px;
     position: relative;
 }
 
