--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,7 @@
 }
 .news .news_main{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #eeddde;
@@ -266,6 +267,15 @@ h2{
         aspect-ratio: 4/3;
         margin: 15px 0;
     }
+    .news .box{
+        width: 100% !important;
+        margin:15px 0;
+    }
+    .news .box:hover a{
+        transform: translateY(-200px);
+        opacity: 1;
+    }
+
 }
 @media screen and (max-width:550px){
     .header_login{
