--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -157,7 +157,8 @@ h2{
     top:0;
     z-index: 10000;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
-    background: transparent;
+    background: #C72C41 !important;
+    opacity: 1;
     transition: 0.7s;
 }
 
