--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -3,6 +3,16 @@
     font-weight: 500;
     max-width: 700px;
     margin: 100px auto;
+    background: #fff;
+    padding:20px;
+    border-radius: 10px;
+}
+h1{
+    font-size: 30px;
+    font-weight: 600;
+    border-bottom: 2px solid #dadada;
+    margin-bottom: 20px;
+    color: var(--color-primary);
 }
 .form .form-control{
     font-size: 15px;
