--- a/assets/css/stylelogin2.css
+++ b/assets/css/stylelogin2.css
@@ -1,4 +1,5 @@
 
+
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +8,7 @@
 }
 
 body {
-    background: url(/assets/image/1340835.png) no-repeat center center fixed;
+    background: url(/assets/image/co.png) no-repeat center center fixed;
     background-size: cover;
     min-height: 100vh;
     display: flex;
@@ -20,25 +21,17 @@ body {
     height: 90vh;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    position: fixed;
+    align-items: center;
+    position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-#login-section {
-    display: block;
-}
-
-#register-section {
-    display: none;
+    transform: translate(-50%, -50%); 
 }
 
 .form-box {
     width: 380px;
     padding: 30px;
-    background: rgba(255, 255, 255, 0.3);
+    background: #ffffff;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
     height: 100%;
@@ -50,8 +43,8 @@ body {
 .form-box h2 {
     text-align: center;
     margin-bottom: 30px;
-    color: #fff;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+    color: #000;
+    text-shadow: none;
 }
 
 .form-group {
@@ -61,7 +54,7 @@ body {
 .form-group label {
     display: block;
     margin-bottom: 5px;
-    color: #fff;
+    color: #000;
     text-shadow: none;
 }
 
@@ -70,14 +63,14 @@ body {
     padding: 10px;
     border: 1px solid rgba(0,0,0,0.1);
     border-radius: 5px;
-    background: rgba(255,255,255,0.9);
+    background: #ffffff;
     outline: none;
 }
 
 .btn {
     width: 100%;
     padding: 12px;
-    background: #ff0000;
+    background: var(--color-primary);
     color: white;
     border: none;
     border-radius: 5px;
@@ -87,7 +80,7 @@ body {
 }
 
 .btn:hover {
-    background: #cc0000;
+   
 }
 
 .switch-form {
@@ -96,7 +89,7 @@ body {
 }
 
 .switch-form a {
-    color: #fff;
+    color: #000;
     text-decoration: none;
     cursor: pointer;
     text-shadow: none;
